--- a/app/start/start.component.html
+++ b/app/start/start.component.html
@@ -17,7 +17,7 @@
         <StackLayout *ngIf="this.loading == false">
             <StackLayout class="info-container fet" orientation="vertical">
                 <StackLayout orientation="vertical">
-                    <Label class="solo" textWrap="true" text="No wallet created yet! Choose to import an existing wallet or create a new one!"></Label>
+                    <Label class="solo" textWrap="true" text="No account created yet! Choose to import an existing account or create a new one!"></Label>
                 </StackLayout>
             </StackLayout>
             <StackLayout class="m-t-15" orientation="vertical">
