--- a/app/create/create.component.html
+++ b/app/create/create.component.html
@@ -22,7 +22,7 @@
                 </StackLayout>
             </StackLayout>
 
-            <StackLayout *ngIf="this.step == 0" orientation="vertical">
+            <StackLayout *ngIf="this.step == 0" class="p-10" orientation="vertical">
                 <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
             </StackLayout>
 
