--- a/app/tabs/accounts/accounts.component.html
+++ b/app/tabs/accounts/accounts.component.html
@@ -3,7 +3,7 @@
         <ng-template let-item="item" let-i="index">
             <StackLayout>
                 <GridLayout (tap)="selectAccount(item)" class="list-item" columns="auto, auto, auto, auto *, auto" rows="auto, auto, auto, auto">
-                    <Label col="0" row="0" colspan="3" class="address" [text]="item.address"></Label>
+                    <Label col="0" row="0" colspan="3" [text]="item.address"></Label>
                     <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
                     <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
 
