--- a/app/start/start.component.html
+++ b/app/start/start.component.html
@@ -1,8 +1,8 @@
 <ActionBar class="action-bar">
-    <StackLayout orientation="horizontal">
-        <Image class="logo-tiny m-r-15" src="res://logo"></Image>
-        <Label class="action-bar-title" text="Hey there!"></Label>
-    </StackLayout>
+    <GridLayout columns="auto, 200" rows="auto">
+        <Image col="0" class="logo-tiny m-r-15" src="res://logo"></Image>
+        <Label col="1" class="action-bar-title" text="Hey there!"></Label>
+    </GridLayout>
 </ActionBar>
 
 <StackLayout class="page-content" orientation="vertical">
