--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -1,6 +1,6 @@
 <Page xmlns="http://www.nativescript.org/tns.xsd" loaded="onPageLoaded">
     <ActionBar class="action-bar">
-        <GridLayout columns="auto, 200, *, auto" rows="auto">
+        <GridLayout columns="auto, 200" rows="auto">
             <Image col="0" class="logo-tiny m-r-15" src="res://logo"></Image>
             <Label col="1" class="action-bar-title" [text]="title"></Label>
         </GridLayout>
