--- a/app/tabs/note/note.component.html
+++ b/app/tabs/note/note.component.html
@@ -3,7 +3,7 @@
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
                 <Label class="solo fa" textWrap="true" text="This version is running on the testnet, therefore importing your default burst accounts will show zero balances. If you need test-BURST to experiment with the functionalities please give notice here:"></Label>
-                <Button class="btn btn-primary btn-active about-button fa" text="&#xf0d6; GetBurst" (tap)="onTapGetBurst($event)"></Button>
+                <Button class="btn btn-primary btn-active about-button fa" text="&#xf0d6; GetBurst" (tap)="onTapGetBurst()"></Button>
             </StackLayout>
         </StackLayout>
     <StackLayout>
