--- a/app/tabs/settings/about/about.component.html
+++ b/app/tabs/settings/about/about.component.html
@@ -3,9 +3,9 @@
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
                 <Label class="solo fa" textWrap="true" text="Feedback, Bugs, Help?"></Label>
-                <Button class="btn btn-primary btn-active about-button fa" text="&#xf02d; Documentation" (tap)="onTapDocumentation($event)"></Button>
+                <Button class="btn btn-primary btn-active about-button fa" text="&#xf02d; Documentation" (tap)="onTapDocumentation()"></Button>
                 <Label class="solo fa" textWrap="true" text="Follow us on twitter to get updates on our projects!"></Label>
-                <Button class="btn btn-primary btn-active about-button fa" text="&#xf099; PoC Consortium" (tap)="onTapTwitter($event)"></Button>
+                <Button class="btn btn-primary btn-active about-button fa" text="&#xf099; PoC Consortium" (tap)="onTapTwitter()"></Button>
                 <Label class="solo fa" textWrap="true" text="Developed by"></Label>
                 <Image class="dev-logo p-b-10" src="res://icewavelogo"></Image>
                 <Label class="solo fa" textWrap="true" text="In Association with"></Label>
