--- a/app/tabs/settings/node/node.component.html
+++ b/app/tabs/settings/node/node.component.html
@@ -11,9 +11,9 @@
                 <Label textWrap="true" text="Node address:"></Label>
                 <GridLayout rows="auto" columns="*, auto">
                     <TextField row="0" col="0" class="input node-address" [(ngModel)]="address" returnKeyType="done"></TextField>
-                    <Button row="0" col="1" class="btn btn-primary btn-active reset-button fa" text="&#xf0e2;" (tap)="onTapReset($event)"></Button>
+                    <Button row="0" col="1" class="btn btn-primary btn-active reset-button fa" text="&#xf0e2;" (tap)="onTapReset()"></Button>
                 </GridLayout>
-                <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk($event)"></Button>
+                <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk()"></Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
