--- a/app/tabs/settings/settings.component.html
+++ b/app/tabs/settings/settings.component.html
@@ -3,7 +3,7 @@
         <GridLayout rows="auto, auto, auto" columns="*">
             <!--<Button row="0" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf1b2; Node: ' + settings.node" (tap)="onTapNode($event)"></Button>
             <Button row="0" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf0d6; Currency: ' + settings.currency" (tap)="onTapCurrency($event)"></Button>-->
-            <Button row="0" col="0" class="btn btn-primary fa settings-button" text="&#xf05a; About" (tap)="onTapAbout($event)"></Button>
+            <Button row="0" col="0" class="btn btn-primary fa settings-button" text="&#xf05a; About" (tap)="onTapAbout()"></Button>
         </GridLayout>
     </StackLayout>
 </StackLayout>
