--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -5,50 +5,51 @@
     </StackLayout>
 </ActionBar>
 
+<ScrollView>
+    <StackLayout class="page-content" orientation="vertical">
 
-<StackLayout class="page-content" orientation="vertical">
+        <StackLayout class="container" orientation="vertical">
 
-    <StackLayout class="container" orientation="vertical">
+            <Image class="logo-small m-b-5" src="res://logo"></Image>
 
-        <Image class="logo-small m-b-5" src="res://logo"></Image>
-
-        <StackLayout class="info-container" orientation="vertical">
-            <StackLayout orientation="vertical">
-                <Label class="top text-view-label fa" text="&#xf05a;"></Label>
-                <Label class="bottom" textWrap="true" text="Import an active account by entering its passphrase! Otherwise, import an offline account by entering its Burstcoin address!"></Label>
-            </StackLayout>
-        </StackLayout>
-
-        <StackLayout *ngIf="this.step == 0" class="p-10" orientation="vertical">
-            <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
-        </StackLayout>
-
-        <StackLayout *ngIf="step == 1">
-            <StackLayout class="body-container" orientation="vertical">
-                <Label class="h3 toggle-label" textWrap="true" [text]="state"></Label>
-                <StackLayout style="width: 100%;" class="info-container" orientation="vertical">
-                    <StackLayout orientation="vertical">
-                        <Label class="solo" textWrap="true" [text]="description"></Label>
-                    </StackLayout>
-                </StackLayout>
-
-                <Switch class="m-10 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
-                <TextField class="input" [hint]="hint" [(ngModel)]="input" (returnPress)="formatAddress()"></TextField>
-            </StackLayout>
-            <StackLayout orientation="vertical">
-                <Button *ngIf="active == true" class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
-                <Button *ngIf="active == false" class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" (tap)="onTapImport($event)"></Button>
-            </StackLayout>
-        </StackLayout>
-
-        <StackLayout *ngIf="step == 2">
             <StackLayout class="info-container" orientation="vertical">
-                <Label textWrap="true" class="solo" text="Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions."></Label>
+                <StackLayout orientation="vertical">
+                    <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                    <Label class="bottom" textWrap="true" text="Import an active account by entering its passphrase! Otherwise, import an offline account by entering its Burstcoin address!"></Label>
+                </StackLayout>
             </StackLayout>
-            <StackLayout class="body-container" orientation="vertical">
-                <TextField class="input" [(ngModel)]="pin" hint="PIN" keyboardType="number" returnKeyType="done"></TextField>
-                <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
+
+            <StackLayout *ngIf="this.step == 0" class="p-10" orientation="vertical">
+                <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+            </StackLayout>
+
+            <StackLayout *ngIf="step == 1">
+                <StackLayout class="body-container" orientation="vertical">
+                    <Label class="h3 toggle-label" textWrap="true" [text]="state"></Label>
+                    <StackLayout style="width: 100%;" class="info-container" orientation="vertical">
+                        <StackLayout orientation="vertical">
+                            <Label class="solo" textWrap="true" [text]="description"></Label>
+                        </StackLayout>
+                    </StackLayout>
+
+                    <Switch class="m-10 toggle-switch" checked="true" (checkedChange)="onChecked($event)"></Switch>
+                    <TextField class="input" [hint]="hint" [(ngModel)]="input" (returnPress)="formatAddress()"></TextField>
+                </StackLayout>
+                <StackLayout orientation="vertical">
+                    <Button *ngIf="active == true" class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
+                    <Button *ngIf="active == false" class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" (tap)="onTapImport($event)"></Button>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout *ngIf="step == 2">
+                <StackLayout class="info-container" orientation="vertical">
+                    <Label textWrap="true" class="solo" text="Please set a six-digit pin code for your account. The pin code is used to approve outgoing transactions."></Label>
+                </StackLayout>
+                <StackLayout class="body-container" orientation="vertical">
+                    <TextField class="input" [(ngModel)]="pin" hint="PIN" keyboardType="number" returnKeyType="done"></TextField>
+                    <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
+                </StackLayout>
             </StackLayout>
         </StackLayout>
     </StackLayout>
-</StackLayout>
+</ScrollView>
