added scroll view to import

--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -10,7 +10,7 @@
 
         <StackLayout class="container" orientation="vertical">
 
-            <Image class="logo-small m-b-5" src="res://logo"></Image>
+            <Image class="logo-small m-b-5 m-t-10" src="res://logo"></Image>
 
             <StackLayout class="info-container" orientation="vertical">
                 <StackLayout orientation="vertical">
