--- a/app/tabs/transactions/transactions.component.html
+++ b/app/tabs/transactions/transactions.component.html
@@ -2,21 +2,25 @@
     <ListView [items]="transactions" separatorColor="transparent">
         <ng-template let-item="item" let-i="index">
             <StackLayout>
-                <GridLayout *ngIf="item.recipientId == ownId" class="m-x-auto list-item" columns="auto, auto, *, auto, auto" rows="auto, auto, auto">
-                    <Label col="0" row="0" class="font-weight-bold fa p-b-5" [text]="item.amountNQT + ' BURST'"></Label>
-                    <Label col="0" row="1" colspan="2" class="fa p-b-5" [text]="'&#xf2c0; ' + item.senderAddress"></Label>
-                    <Label col="0" row="2" class="fa p-b-5" [text]="'&#xf017; ' + (convertTimestamp(item.timestamp) | date: 'dd.MM.yyyy hh:mm:ss a')"></Label>
-                    <Label col="3" row="0" rowspan="3" class="font-weight-bold transaction-label-in" text="IN"></Label>
-                    <Label *ngIf="item.confirmed" col="4" row="0" rowspan="3" class="fa confirmed-indicator" text="&#xf00c;"></Label>
-                    <Label *ngIf="!item.confirmed" col="4" row="0" rowspan="3" class="fa unconfirmed-indicator" text="&#xf021;"></Label>
+                <GridLayout *ngIf="item.recipientId == ownId" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
+                    <Label col="0" row="0" colspan="3" class="font-weight-italic fa p-b-5 amount" [text]="item.amountNQT + ' BURST / ' + marketService.getPriceFiatCurrency(item.amountNQT, 2)"></Label>
+                    <Label col="4" row="0" class="transaction-label-in fa" text="&#xf078;"></Label>
+
+                    <Label col="0" row="1" colspan="3" class="fa p-b-5" [text]="'&#xf2c0; ' + item.senderAddress"></Label>
+
+                    <Label col="0" row="2" colspan="3" class="fa p-b-5" [text]="'&#xf017; ' + (convertTimestamp(item.timestamp) | date: 'dd.MM.yyyy hh:mm:ss a')"></Label>
+                    <Label *ngIf="item.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
+                    <Label *ngIf="!item.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
                 </GridLayout>
-                <GridLayout *ngIf="item.recipientId != ownId" class="m-x-auto list-item" columns="auto, auto,* ,auto, auto" rows="auto, auto, auto">
-                    <Label col="0" row="0" class="font-weight-bold fa p-b-5" [text]="item.amountNQT + ' BURST'"></Label>
-                    <Label col="0" row="1" colspan="2" class="fa p-b-5" [text]="'&#xf2bc; ' + item.recipientAddress"></Label>
-                    <Label col="0" row="2" class="fa p-b-5" [text]="'&#xf017; ' + (convertTimestamp(item.timestamp) | date: 'dd.MM.yyyy HH:mm:ss')"></Label>
-                    <Label col="3" row="0" rowspan="3" class="font-weight-bold transaction-label-out" text="OUT"></Label>
-                    <Label *ngIf="item.confirmed" col="4" row="0" rowspan="3" class="fa confirmed-indicator" text="&#xf00c;"></Label>
-                    <Label *ngIf="!item.confirmed" col="4" row="0" rowspan="3" class="fa unconfirmed-indicator" text="&#xf021;"></Label>
+                <GridLayout *ngIf="item.recipientId != ownId" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
+                    <Label col="0" row="0" colspan="3" class="font-weight-italic fa p-b-5 amount" [text]="item.amountNQT + ' BURST / ' + marketService.getPriceFiatCurrency(item.amountNQT, 2)"></Label>
+                    <Label col="4" row="0" class="transaction-label-out fa" text="&#xf077;"></Label>
+
+                    <Label col="0" row="1" colspan="3" class="fa p-b-5" [text]="'&#xf2c0; ' + item.recipientAddress"></Label>
+
+                    <Label col="0" row="2" colspan="3" class="fa p-b-5" [text]="'&#xf017; ' + (convertTimestamp(item.timestamp) | date: 'dd.MM.yyyy hh:mm:ss a')"></Label>
+                    <Label *ngIf="item.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
+                    <Label *ngIf="!item.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
                 </GridLayout>
             </StackLayout>
         </ng-template>
