--- a/app/tabs/transactions/transactions.component.scss
+++ b/app/tabs/transactions/transactions.component.scss
@@ -14,8 +14,13 @@
     vertical-align: middle;
 }
 
+.address {
+    width: 100%
+}
+
 .amount {
     font-size: 16;
+    width: 85%;
 }
 
 .confirmed-indicator {
