--- a/app/tabs/accounts/activate/activate.component.html
+++ b/app/tabs/accounts/activate/activate.component.html
@@ -6,39 +6,35 @@
 </ActionBar>
 
 <Page xmlns="http://www.nativescript.org/tns.xsd" loaded="onPageLoaded" actionBarHidden="true">
-    <ScrollView>
-        <StackLayout class="page-content" orientation="vertical">
-            <StackLayout class="container" orientation="vertical">
-                <Image class="logo-small m-b-15" src="res://logo"></Image>
+    <StackLayout class="page-content" orientation="vertical">
+        <StackLayout class="container" orientation="vertical">
+            <Image class="logo-small m-b-15" src="res://logo"></Image>
 
-                <StackLayout *ngIf="this.step == 0" style="margin-bottom: 200px;" orientation="vertical">
-                    <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+            <StackLayout *ngIf="this.step == 0" style="margin-bottom: 200px;" orientation="vertical">
+                <ActivityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+            </StackLayout>
+
+            <StackLayout *ngIf="step == 1">
+                <StackLayout class="info-container" orientation="vertical">
+                    <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                    <Label textWrap="true" class="bottom" [text]="'Enter the passphrase of the account ' + accountService.currentAccount.value.address + ' here!'"></Label>
                 </StackLayout>
-
-                <StackLayout *ngIf="step == 1">
-                    <StackLayout class="info-container" orientation="vertical">
-                        <Label class="top text-view-label fa" text="&#xf05a;"></Label>
-                        <Label textWrap="true" class="bottom" [text]="'Enter the passphrase of the account ' + accountService.currentAccount.value.address + ' here!'"></Label>
-                    </StackLayout>
-                    <StackLayout class="body-container m-b-20" orientation="vertical">
-                        <Label class="text-view-label fa" text="&#xf084; Passphrase"></Label>
-                        <TextField class="input" [(ngModel)]="passphrase" returnKeyType="done"></TextField>
-                        <Button class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
-                    </StackLayout>
+                <StackLayout class="body-container m-b-20" orientation="vertical">
+                    <TextField class="input" [(ngModel)]="passphrase" hint="Passphrase" returnKeyType="done"></TextField>
+                    <Button class="btn btn-primary btn-active action-button fa" text="Next &#xf18e;" (tap)="onTapNext($event)"></Button>
                 </StackLayout>
+            </StackLayout>
 
-                <StackLayout *ngIf="step == 2">
-                    <StackLayout class="info-container" orientation="vertical">
-                        <Label class="top text-view-label fa" text="&#xf05a;"></Label>
-                        <Label textWrap="true" class="bottom" text="Set a six-digit PIN code!"></Label>
-                    </StackLayout>
-                    <StackLayout class="body-container m-b-20" orientation="vertical">
-                        <Label class="text-view-label fa" text="&#xf292; PIN"></Label>
-                        <TextField class="input" [(ngModel)]="pin" keyboardType="number" returnKeyType="done"></TextField>
-                        <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
-                    </StackLayout>
+            <StackLayout *ngIf="step == 2">
+                <StackLayout class="info-container" orientation="vertical">
+                    <Label class="top text-view-label fa" text="&#xf05a;"></Label>
+                    <Label textWrap="true" class="bottom" text="Set a six-digit PIN code!"></Label>
+                </StackLayout>
+                <StackLayout class="body-container m-b-20" orientation="vertical">
+                    <TextField class="input" [(ngModel)]="pin" hint="PIN" keyboardType="number" returnKeyType="done"></TextField>
+                    <Button class="btn btn-primary btn-active action-button fa" text="Done &#xf05d;" (tap)="onTapDone($event)"></Button>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
-    </ScrollView>
+    </StackLayout>
 </Page>
