--- a/app/tabs/transactions/transactions.component.html
+++ b/app/tabs/transactions/transactions.component.html
@@ -2,7 +2,7 @@
     <ListView [items]="transactions" separatorColor="transparent">
         <ng-template let-item="item" let-i="index">
             <StackLayout>
-                <GridLayout *ngIf="item.recipientId == ownId" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
+                <GridLayout *ngIf="item.recipientId == ownId" (doubleTap)="onDoubleTap(item.senderAddress)" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
                     <Label col="0" row="0" colspan="3" class="font-weight-italic fa p-b-5 amount" [text]="item.amountNQT + ' BURST / ' + marketService.getPriceFiatCurrency(item.amountNQT, 2)"></Label>
                     <Label col="4" row="0" class="transaction-label-in fa" text="&#xf078;"></Label>
 
@@ -12,7 +12,7 @@
                     <Label *ngIf="item.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
                     <Label *ngIf="!item.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
                 </GridLayout>
-                <GridLayout *ngIf="item.recipientId != ownId" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
+                <GridLayout *ngIf="item.recipientId != ownId" (doubleTap)="onDoubleTap(item.recipientAddress)" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
                     <Label col="0" row="0" colspan="3" class="font-weight-italic fa p-b-5 amount" [text]="item.amountNQT + ' BURST / ' + marketService.getPriceFiatCurrency(item.amountNQT, 2)"></Label>
                     <Label col="4" row="0" class="transaction-label-out fa" text="&#xf077;"></Label>
 
