--- a/app/tabs/note/note.component.html
+++ b/app/tabs/note/note.component.html
@@ -2,7 +2,7 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
-                <Label class="solo fa" textWrap="true" [text]="'Version ' + version"></Label>
+                <Label class="solo fa" textWrap="true" text="Version"></Label>
                 <Label class="top fa text-left" textWrap="true" text="Features:"></Label>
                 <Label class="middle fa text-left" textWrap="true" text="* Watch only addresses"></Label>
                 <Label class="middle fa text-left" textWrap="true" text="* Currency Conversion"></Label>
