reset button moved

--- a/app/tabs/settings/about/about.component.html
+++ b/app/tabs/settings/about/about.component.html
@@ -2,6 +2,7 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
+                <Label class="solo fa" textWrap="true" [text]="'Version: ' + version"></Label>
                 <Label class="solo fa" textWrap="true" text="Follow us on twitter to get updates on our projects!"></Label>
                 <Button class="btn btn-primary btn-active about-button fa" text="&#xf099; PoC Consortium" (tap)="onTapTwitter()"></Button>
                 <Label class="solo fa" textWrap="true" text="Developed by"></Label>
