--- a/app/tabs/settings/node/node.component.html
+++ b/app/tabs/settings/node/node.component.html
@@ -3,11 +3,11 @@
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
                 <Label class="solo fa" textWrap="true" text="The Burst node is used to communicate with the Burst network"></Label>
-                <GridLayout rows="auto" columns="*, auto">
-                    <TextField row="0" col="0" class="input node-address" [(ngModel)]="address" returnKeyType="done"></TextField>
-                    <Button row="0" col="1" class="btn btn-primary btn-active reset-button fa" text="&#xf0e2;" (tap)="onTapReset()"></Button>
+                <TextField class="input node-address" [(ngModel)]="address" returnKeyType="done"></TextField>
+                <GridLayout rows="auto" columns="*,auto">
+                    <Button col="0" class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk()"></Button>
+                    <Button col="1" class="btn btn-primary btn-active reset-button fa" text="&#xf0e2;" (tap)="onTapReset()"></Button>
                 </GridLayout>
-                <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk()"></Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
