--- a/app/tabs/settings/node/node.component.scss
+++ b/app/tabs/settings/node/node.component.scss
@@ -1,8 +1,8 @@
 @import '../../../app-variables';
 
 .reset-button {
-    height: 50;
-    width: 50;
+    height: $btn-height;
+    width: $btn-height;
     margin: 2;
 }
 
