balance scss ios

--- a/app/tabs/tabs.component.ios.scss
+++ b/app/tabs/tabs.component.ios.scss
@@ -2,5 +2,18 @@
 
 // Place any CSS rules you want to apply only on IOS here
 TabView {
-    selected-tab-text-color: $item-active-color;
+    tab-text-color: $default-text;
+    selected-tab-text-color: $background-dark;
+    android-selected-tab-text-color: $background-dark;
+    android-selected-tab-highlight-color: $background-dark;
+    font-size: 10;
+}
+
+
+.tab-view-item {
+    background-color: $background-light;
+}
+
+.tab {
+    font-size: 14;
 }
